--- a/app/src/sass/components/_project-overview.scss
+++ b/app/src/sass/components/_project-overview.scss
@@ -75,9 +75,6 @@
 .filters .cta-box .btn {
   width: 50%;
 }
-.project-img img {
-  width: 100%;
-}
 .project-list {
   flex-wrap: wrap;
   justify-content: space-around;
